--- a/bwapi/BWAPI_PluginInjector/BWAPI_PluginInjector.vcxproj
+++ b/bwapi/BWAPI_PluginInjector/BWAPI_PluginInjector.vcxproj
@@ -65,7 +65,7 @@
     </ClCompile>
     <PreLinkEvent>
       <Message>Creating ChaosLauncherInjector readme</Message>
-      <Command>COPY "$(SolutionDir)..\Release_Binary\README" "$(SolutionDir)..\Release_Binary\Chaoslauncher\Plugins\$(ProjectName).txt" /Y</Command>
+      <Command>COPY "$(SolutionDir)..\README.md" "$(SolutionDir)..\Release_Binary\Chaoslauncher\Plugins\$(ProjectName).txt" /Y</Command>
     </PreLinkEvent>
     <Link>
       <MapFileName>
@@ -97,7 +97,7 @@ COPY /Y "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\Release_Binary\MP
     </ClCompile>
     <PreLinkEvent>
       <Message>Creating ChaosLauncherInjector readme</Message>
-      <Command>COPY "$(SolutionDir)..\Release_Binary\README" "$(SolutionDir)..\Release_Binary\Chaoslauncher\Plugins\$(ProjectName)d.txt" /Y</Command>
+      <Command>COPY "$(SolutionDir)..\README.md" "$(SolutionDir)..\Release_Binary\Chaoslauncher\Plugins\$(ProjectName)d.txt" /Y</Command>
     </PreLinkEvent>
     <Link>
       <GenerateDebugInformation>false</GenerateDebugInformation>
