--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -120,6 +120,25 @@ holiday = ON
 ; Setting this to OFF will disable the BWAPI Server, default is ON
 shared_memory = ON
 
+; console_* = TRUE | FALSE
+; Used for getting a console for displaying text written to stdout and stderr, and read from stdin.
+; console_attach_*
+;   Allows BWAPI to attach to the parent process' console. i.e. if the parent
+;   has a console, output will be displayed on that console, and that console
+;   also kept open even if the parent dies.
+; console_alloc_*
+;   Allows BWAPI to allocate it's own system console window. Not executed if
+;   corresponding console_attach_* is enabled and succeeds.
+; console_*_on_startup
+;   Executes when BWAPI.dll is first attached to Starcraft.
+; console_*_auto
+;   Executes when something is written to std::cout or std::cerr,
+;   and no console was successfully attached/allocated on startup.
+console_attach_on_startup = FALSE
+console_alloc_on_startup = FALSE
+console_attach_auto = TRUE
+console_alloc_auto = TRUE
+
 [window]
 ; These values are saved automatically when you move, resize, or toggle windowed mode
 
