--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -226,6 +226,7 @@ popd</Command>
     <ClInclude Include="..\include\BWAPI\Interface.h" />
     <ClInclude Include="..\include\BWAPI\Player.h" />
     <ClInclude Include="..\include\BWAPI\Region.h" />
+    <ClInclude Include="..\include\BWAPI\Streams.h" />
     <ClInclude Include="..\include\BWAPI\Unit.h" />
     <ClInclude Include="..\Shared\Templates.h" />
     <ClInclude Include="Source\Assembly.h" />
@@ -320,6 +321,7 @@ popd</Command>
     <ClCompile Include="Source\BWAPI\PlayerImpl.cpp" />
     <ClCompile Include="Source\BWAPI\RegionImpl.cpp" />
     <ClCompile Include="Source\BWAPI\Server.cpp" />
+    <ClCompile Include="Source\BWAPI\Streams.cpp" />
     <ClCompile Include="Source\BWAPI\UnitImpl.cpp" />
     <ClCompile Include="Source\BWAPI\UnitUpdate.cpp" />
     <ClCompile Include="Source\BW\Bitmap.cpp" />
